samples/_failures_safe/1761479423_67be2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a20bc565.c: In function ‘main’:
./samples/SAFE/__tmp_a20bc565.c:159:17: error: expected expression at end of input
  159 |                 if (status == 1)
      |                 ^~
./samples/SAFE/__tmp_a20bc565.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a20bc565.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a20bc565.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a20bc565.c:159:17: error: expected declaration or statement at end of input
